--- a/TdN Analitica B/TdN_analitica.tex
+++ b/TdN Analitica B/TdN_analitica.tex
@@ -39,7 +39,7 @@
 
 \mainmatter
 \include{intro}
-%\include{./Chapters/chapter01}
+\include{goldbach}
 %\include{./Chapters/chapter02}
 %\include{./Chapters/chapter03}
 
